syntax = "proto3";

option csharp_namespace = "Myprotos";

package Customers;

service GrpcCustomer {
    rpc GetAll (Empty) returns (CustomerList);
    rpc GetCustomer (IDrequest) returns (Customer);
    
    rpc CreateCustomer (Customer) returns (CustomerResponse);
    rpc UpdateCustomer (Customer) returns (CustomerResponse);
    rpc DeleteCustomer (IDrequest) returns (CustomerResponse);
}

message Empty {}

message Customer {
    string id = 1;
    string name = 2;
    string gender = 3;
    string birthday = 4;
    string address = 5;
}

message CustomerList {
    repeated Customer customers = 1;
}

message IDrequest {
    string id = 1;
}

message CustomerResponse {
    bool success = 1;
    string message = 2;
}
